# Open-Omniscience

./: .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  ANALYSIS_AND_PLAN.md  AUDIT_LOG.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUDIT_TRAIL.md  CLAUDE.md  COMPLIANCE.md  CONTRIBUTING.md  CONVERSATION_SUMMARY.md  ChangeLog  DEBUG_AND_FIX_SUMMARY.md  DEBUG_PROGRESS.md  DEBUG_PROGRESS_REPORT.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION.md  Dockerfile  Dockerfile.llm  ETHICS.md  FINAL_DEBUG_REPORT.md  FIXES_SUMMARY.md  Future_Devs  Future_close-source_works  GUI_AUDIT_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL-QUBES.sh  INSTALLATION_GUIDE.md  INSTALLER_TEST_REPORT.md  KNOWN_ISSUES.md  LAUNCHER_README.md  LICENSE  LICENSE_CHANGE.md  MANIFEST.in  Makefile  (+61 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  ci-cd.yml  ci.yml  code-quality.yml  deploy.yml  freshness.yml  release.yml  scheduled.yml  test.yml
archive/outdated/: more_sources.yml
archive/root/: ChangeLog  ROADMAP_NEXT_UPDATE.md  test_keyword_extractor.py
archive/secure/: RELEASE_SUMMARY.md
assets/: logo.txt
backend/: requirements.txt
backend/src/: __init__.py  main.py
configs/: blockchain.yml  calendar_feeds.yml  catalog_query.yml  catalog_targets.yml  cities.sample.yml  climate_events.yml  commodity_feeds.yml  corroboration_rules.yml  default_sources.yaml  email_sources.yaml.example  external_artifacts.yml  index_feeds.yml  keyword_equivalents.yml  keyword_rings_generated.yml  keyword_supergroups.yml  legal.yml  legal_sources.yml  legal_sources_generated.yml  market_rules.example.yml  markets_sources.yml  models.yml  personality.yml  settings.yaml  sources.txt  sources.yml  sources_spectrum.yml  world_events.yml  world_timeline.yml
configs/docker/: docker-compose.llm.yml  docker-compose.production.yml
configs/ir_eval/: gold_set.example.json
configs/keyword_baseline/: de.yml  en.yml  es.yml  fr.yml  it.yml  nl.yml  pt.yml
configs/python/: .flake8  pyproject.toml  requirements-all.txt  requirements-core.txt  requirements.txt
configs/stopwords_extra/: PROVENANCE.md  _multilingual.yml  ar.yml  az.yml  bg.yml  bn.yml  ca.yml  cs.yml  da.yml  de.yml  el.yml  en.yml  es.yml  et.yml  fi.yml  fr.yml  hi.yml  hu.yml  id.yml  it.yml  ko.yml  mr.yml  nb.yml  nl.yml  pl.yml  pt.yml  ro.yml  ru.yml  sk.yml  sl.yml  sr.yml  sv.yml  sw.yml  tr.yml  uk.yml
configs/stopwords_iso/: NOTICE.md
configs/subjectivity/: ar.txt  en.txt  ru.txt
contracts/: OpenOmniscienceAnchor.sol
docs/: ACTION_PLAN.md  ANNOTATIONS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_2026-06.md  BLOCKCHAIN_API.md  BLOCKCHAIN_ARCHITECTURE.md  BLOCKCHAIN_SETUP.md  BRIEFING.md  BUSINESS_MODELS_DRAFT.md  CHAIN_OF_CUSTODY.md  CHANGES.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTENT_ANALYSIS_STRATEGY.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT_GUIDE.md  DESIGN.md  DEVELOPER_GUIDE.md  EMAIL_NEWSLETTER_INTELLIGENCE.md  ENHANCED_FEATURES.md  ETHICS.md  FINAL_MASTER_REPORT.md  FINAL_REPORT.md  FUTURE_DEVELOPMENTS.md  GOVERNANCE.md  GUI_DIALECTIC.md  GUI_REDESIGN_0.05.md  HISTORY.md  HOSTING_AND_MOBILE.md  I18N.md  IMPLEMENTATION_SUMMARY.md  INSIGHTS.md  INTEGRITY.md  KNOWN_GAPS.md  LAW.md  LLM_SETUP_GUIDE.md  MARKETS.md  NEXT_VERSION.md  (+25 more)
docs/adr/: ADR-001-Hybrid-Signatures.md  ADR-002-SHA3-512-Hashing.md  (+1 more)
frontend/: package.json
installer/: README.md  feature_checker.py  gui_installer.py  modern_theme.py  open-omniscience.desktop
migrations/: env.py
monitoring/: prometheus.production.yml  prometheus.yml
package/: BUILD_INSTRUCTIONS.md  README.md
patches/: nginx.conf
pillar2/: README.md  requirements.txt
pillar3/: PILLAR3_SUMMARY.md  README.md  requirements.txt
pillar4/: IMPLEMENTATION_PLAN.md  requirements.txt
pillar5/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_UPDATED.md  PILLAR5_TECHNICAL_SPECIFICATION.md  requirements.txt
pillar6/: PILLAR6_TECHNICAL_SPECIFICATION.md  README.md  requirements.txt
quarantine/: README.md  configs_models.yml  fabricated_sources.md
scripts/: README.md  add_gpl3_headers.py  analyze_keyword_log.py  benchmark_audit.py  bootstrap.sh  build_city_gazetteer.py  build_country_polygons.py  build_ip_geo.py  build_stopwords.py  build_world_news_catalog.py  build_world_outline.py  catalog_coverage_report.py  check_external_freshness.py  check_upstream_updates.py  cleanup_source_tags.py  debug_install.sh  deploy-staging.sh  derive_source_topics.py  encrypt_db.py  enrich_sources_wikidata.py  freshness_issue.py  generate_scale_corpus.py  generate_wikidata_rings.py  i18n_report.py  import_eml.py  init-postgres.sql  install  kpi_diff.py  launch.sh  make_enrichment_batches.py  make_icon_png.py  merge_enrichment_results.py  perf_harness.py  preflight.sh  run_scale_bench.py  seed_sources.py  setup_llm.py  translate_docs.py  update_license.py  validate_legal_catalog.py  (+3 more)
src/: __init__.py  diagnostics.py  main_pipeline.py  paths.py  pipeline.py
static/: showcase.html
tests/: __init__.py  conftest.py  ooviz_node_test.js  osmpbf_node_test.js  sqlcipher_helper.py  test_a2_job_endpoints.py  test_a6_riders.py  test_additive_restore_only.py  test_agenda_month_shift.py  test_agenda_prefs.py  test_ai_auto_on_ingest.py  test_ai_custom_prompts.py  test_ai_diagnostics.py  test_ai_keyword_extract.py  test_ai_langdetect.py  test_ai_langdetect_continuous.py  test_ai_langdetect_resilience.py  test_ai_layer.py  test_ai_perception.py  test_airplane_socket_guard.py  test_alembic_stamp_align.py  test_alert_layer.py  test_all_diagnostics_job.py  test_an_trend_overlay.py  test_analysis_api.py  test_analytics_extract.py  test_analytics_queries.py  test_analytics_store.py  test_annotations.py  test_api.py  test_api_ingestion.py  test_api_search.py  test_api_signals_router.py  test_api_wiring.py  test_app_state_kv.py  test_arabic_tokenizer.py  test_archive_backfill.py  test_article_dates.py  test_article_identity_seams.py  test_article_length.py  (+563 more)
(+1243 files in other folders)
