# Open-Omniscience — single source of truth for packaging & tooling.
#
# Target: Qubes OS Debian AppVM · Python 3.13 · single local user · loopback-only.
# This replaces the six conflicting requirements files. Core is a lean, trustworthy
# spine (web + DB + ethical ingest + search + export); everything heavier is an
# opt-in extra. No torch/onnx/transformers/tensorflow — local LLM is the external
# Ollama binary, reached over HTTP via httpx.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-omniscience"
version = "0.4.0"
description = "Local-first, ethical intelligence platform for investigative journalists."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.13"
authors = [{ name = "Ideotion", email = "open-omniscience@ideotion.com" }]
keywords = ["intelligence", "journalism", "scraping", "llm", "osint", "provenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Linguistic",
]

# --- Core: the trustworthy spine. Lean enough to run on a modest AppVM. ---
dependencies = [
    # Web / API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20",
    # Data / ORM
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    # Ingestion
    "requests>=2.31",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "feedparser>=6.0.11",
    "trafilatura>=1.12",          # robust article extraction (title/body/date/lang)
    # Config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0.1",
    # Security (real implementations; the code must fail loudly if these are
    # absent rather than silently degrading -- see src/utils/security.py).
    "bleach>=6.1",
    "bcrypt>=4.1",
    # Tamper-evident reporting (Ed25519 signatures + Merkle) is a core value
    # proposition of this tool, so its crypto lib ships in the core.
    "cryptography>=42.0",
    # Image metadata / EXIF verification (honest extraction, no forensics claims).
    "pillow>=10.3",
    # Utilities
    "structlog>=24.1",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
    "cachetools>=5.3",
    "orjson>=3.10",
    "psutil>=5.9",
]

[project.optional-dependencies]
# Local LLM analysis. Ollama is an external native binary; the app speaks HTTP only.
# httpx is already in core, so this extra exists mainly to document the capability
# boundary and to pin a slightly newer floor if needed later.
llm = [
    "httpx>=0.27",
]

# Quantitative analysis / NLP (Pillar 2 rigor, keyword & link analysis). All ship
# 3.13 wheels. Kept out of core so the spine stays light.
analysis = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "networkx>=3.3",
    "nltk>=3.8.1",
    "vaderSentiment>=3.3.2",
]

# Optional GPG-based signing path (cryptography/Ed25519 is in core).
crypto = [
    "python-gnupg>=0.5.2",
]

# Post-quantum chain-of-custody signatures. The custody log signs with Ed25519
# alone if this is absent (and labels itself honestly); installing this upgrades
# new signatures to hybrid Ed25519 + ML-DSA (FIPS 204) for quantum resistance.
pqc = [
    "pqcrypto>=0.3.4",
]

# Independent "existed no later than T" timestamping via OpenTimestamps (anchors
# an opaque hash into Bitcoin; no wallet, no fee). Without it, custody entries use
# a self-asserted local time and anchoring falls back to the offline local book.
timestamping = [
    "opentimestamps>=0.4.5",
]

dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.100",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
open-omniscience = "src.api.main:main"

[project.urls]
Homepage = "https://github.com/ideotion/Open-Omniscience"
Repository = "https://github.com/ideotion/Open-Omniscience.git"
Issues = "https://github.com/ideotion/Open-Omniscience/issues"

# src-layout preserved to keep git history/blame intact. Pillars are standalone
# trees (not part of the installed core package) and are added back deliberately
# as each is rebuilt for real.
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations", "quarantine", "build", "dist", ".venv"]

[tool.ruff.lint]
# Sensible, non-pedantic default. E/F = pyflakes+pycodestyle, I = isort,
# UP = pyupgrade, B = bugbear, C4 = comprehensions, SIM = simplify.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length is advisory; ruff-format handles wrapping
    "B008",   # Depends() in arg defaults is the idiomatic FastAPI pattern
    "UP042",  # (str, Enum) is intentional for JSON-serialisable enums
]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["quarantine/", "migrations/"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Only the core suite for now. Pillars are added back as each is rebuilt.
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/*/migrations/*", "quarantine/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
