# Open-Omniscience — single source of truth for packaging & tooling.
#
# Target: Qubes OS Debian AppVM · Python 3.13 · single local user · loopback-only.
# This replaces the six conflicting requirements files. Core is a lean, trustworthy
# spine (web + DB + ethical ingest + search + export); everything heavier is an
# opt-in extra. No torch/onnx/transformers/tensorflow — local LLM is the external
# Ollama binary, reached over HTTP via httpx.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-omniscience"
version = "0.2.0"
description = "Local-first, ethical intelligence platform for investigative journalists."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.13"
authors = [{ name = "Ideotion", email = "open-omniscience@ideotion.com" }]
keywords = ["intelligence", "journalism", "scraping", "llm", "osint", "provenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Linguistic",
]

# --- Core: the trustworthy spine. Lean enough to run on a modest AppVM. ---
dependencies = [
    # Web / API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20",
    # Data / ORM
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    # At-rest encryption (maintainer-ruled default): SQLCipher 4 via self-
    # contained wheels on Linux/Windows/macOS (verified: gate zero + the 3-OS
    # CI smoke job). Plaintext stores still open via stdlib sqlite3 -- the
    # driver engages only for encrypted files (src/database/connect.py).
    "sqlcipher3>=0.6.2",
    # Ingestion
    "requests>=2.31",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "feedparser>=6.0.11",
    "trafilatura>=1.12",          # robust article extraction (title/body/date/lang)
    # Config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0.1",
    # Security (real implementations; the code must fail loudly if these are
    # absent rather than silently degrading -- see src/utils/security.py).
    "bleach>=6.1",
    "bcrypt>=4.1",
    # Untrusted-XML hardening: Wikipedia dumps are parsed as untrusted input
    # (billion-laughs / XXE defense). Used by src/wiki/dumpread.py.
    "defusedxml>=0.7.1",
    # Tamper-evident reporting (Ed25519 signatures + Merkle) is a core value
    # proposition of this tool, so its crypto lib ships in the core.
    "cryptography>=42.0",
    # Image metadata / EXIF verification (honest extraction, no forensics claims).
    "pillow>=10.3",
    # Utilities
    "structlog>=24.1",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
    "cachetools>=5.3",
    "orjson>=3.10",
    "psutil>=5.9",
]

[project.optional-dependencies]
# Local LLM analysis. Ollama is an external native binary; the app speaks HTTP only.
# httpx is already in core, so this extra exists mainly to document the capability
# boundary and to pin a slightly newer floor if needed later.
llm = [
    "httpx>=0.27",
]

# Quantitative analysis / NLP (Pillar 2 rigor, keyword & link analysis). All ship
# 3.13 wheels. Kept out of core so the spine stays light.
analysis = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "networkx>=3.3",
    # nltk REMOVED 2026-07-02: it was never imported anywhere (vaderSentiment
    # bundles its own lexicon) and PYSEC-2026-597 landed against it with no fixed
    # release -- dropping the unused dependency beats ignoring the advisory.
    "vaderSentiment>=3.3.2",
    # Offline language detection (pure-Python, bundled model, NO network) for the
    # "secondary/deduced" language of articles the source/extractor left untagged --
    # so a foreign article gets the right stoplist instead of leaking function words
    # (field §2.6). Gated like VADER: a core install simply leaves the language NULL.
    "py3langid>=0.3",
    # Offline lemmatization (pure-Python, bundled dictionaries, NO torch/network) for the
    # OPT-IN display-time keyword conflation in families.py (P4.3: study/studied -> study,
    # Wahlen -> Wahl). Gated like the rest: a core install leaves families.py's lemma step a
    # no-op (OO_FAMILY_LEMMA defaults off; the mechanism degrades gracefully when absent).
    "simplemma>=1.1",
]

# Optional real Named-Entity Recognition for the Insights tab (people / orgs /
# places). Local, CPU-friendly, offline once a model is downloaded. The baseline
# extractor works without this; when present, get_extractor("spacy") uses it.
# After install, fetch a model, e.g.:  python -m spacy download en_core_web_sm
nlp = [
    "spacy>=3.7",
]

# Optional PDF text extraction. Used by the world-law tracker (many official
# gazettes publish legislation as PDFs) AND the local PDF-document importer. pypdf
# (pure-Python, BSD, no native build, no network) reads the text. A core install has
# no extractor, so a PDF is recorded honestly as "no usable text" rather than
# crashing (src/ingest/pdf.py degrades loudly) — and a scanned/image or mis-decoded
# PDF is NEVER stored as a garbage body even when pypdf IS present (the
# mis-extraction guard).
pdf = [
    "pypdf>=4.0",
]

# Optional OCR fallback for SCANNED / image-only PDFs (no text layer). The
# born-digital text layer ([pdf]) is always tried first — this only runs on scans.
# pytesseract (Apache-2.0) shells out to the **tesseract** SYSTEM binary, which is
# NOT pip-installable (install it separately: e.g. `apt install tesseract-ocr`, and
# `tesseract-ocr-<lang>` for extra languages); pypdfium2 (Apache-2.0/BSD, bundled
# binary, no system dep) renders pages to images; Pillow handles the image. A core
# install (or a machine without the tesseract binary) simply skips OCR — a scanned
# PDF is recorded honestly as "no usable text", never a crash. HONESTY: OCR is a
# LOWER-TRUST class (can mis-read / mis-order columns), tagged as such and gated by
# a confidence floor — the original PDF stays the source of truth.
ocr = [
    "pytesseract>=0.3.10",
    "pypdfium2>=4",
    "Pillow>=10",
]

# Optional word segmentation for the space-less scripts (zh/ja/th) the whitespace
# tokenizer cannot split — without it a whole Chinese/Japanese sentence became ONE
# junk "keyword" and Thai shattered at its marks (field test 2026-07-08). All three
# are pure-local, OFFLINE (dictionaries bundled in the wheel, no model download, no
# network) and license-clean: jieba (MIT) / janome (Apache-2.0) / pythainlp (Apache-2.0).
# A core install works without them — src/analytics/segmentation.py degrades to the
# whitespace tokenizer and zh/ja/th stay honestly reported "unsegmented".
segmentation = [
    "jieba>=0.42",
    "janome>=0.5",
    "pythainlp>=5.0",
]

# Optional GPG-based signing path (cryptography/Ed25519 is in core).
crypto = [
    "python-gnupg>=0.5.2",
]

# Optional derived COLUMNAR read-model (data-architecture Slice 4): a DuckDB
# accelerator for the heavy whole-corpus aggregations. Kept OUT of core: when absent
# the read-model seam (src/analytics/readmodel.py) serves the live SQLite query
# (slower, never wrong). The canonical encrypted SQLCipher store always stays the
# source of truth; the columnar store is a disposable, rebuildable cache. Encryption
# uses DuckDB's AES backend (>=1.4); a SECURE persisted store needs an OpenSSL crypto
# extension available OFFLINE -- when it is not, the engine runs IN-MEMORY rather than
# ever writing a plaintext derived file (see src/analytics/columnar.py).
columnar = [
    "duckdb>=1.4",
]

# Post-quantum chain-of-custody signatures. The custody log signs with Ed25519
# alone if this is absent (and labels itself honestly); installing this upgrades
# new signatures to hybrid Ed25519 + ML-DSA (FIPS 204) for quantum resistance.
pqc = [
    "pqcrypto>=0.3.4",
]

# Independent "existed no later than T" timestamping via OpenTimestamps (anchors
# an opaque hash into Bitcoin; no wallet, no fee). Without it, custody entries use
# a self-asserted local time and anchoring falls back to the offline local book.
timestamping = [
    "opentimestamps>=0.4.5",
]

# Optional compression accelerators for the on-disk content store. When absent the
# DB content/JSON columns fall back to stdlib zlib automatically (honest: nothing
# breaks, the ratio is just lower) -- see src/utils/compression.py. Installing
# zstandard markedly improves text compression (it is the store's preferred codec
# when available); lz4 favours speed. Both ship 3.13 wheels; existing zlib-stored
# blobs still decompress unchanged (the codec is recorded per blob in the header).
compression = [
    "zstandard>=0.22",
    "lz4>=4.3",
]

dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.100",
    "ruff>=0.4.0",
    # Pinned: the type-check ratchet count must be deterministic. An unpinned
    # floor let a newer mypy report one extra error (129 > 128) and redden every
    # PR with no code change. Bump deliberately, re-measuring the baseline.
    "mypy==2.2.0",
    "httpx>=0.27",
]

[project.scripts]
open-omniscience = "src.api.main:main"

[project.urls]
Homepage = "https://github.com/ideotion/Open-Omniscience"
Repository = "https://github.com/ideotion/Open-Omniscience.git"
Issues = "https://github.com/ideotion/Open-Omniscience/issues"

# src-layout preserved to keep git history/blame intact. The legacy six-pillar
# trees were archived out of the working tree (docs/QUARANTINE_ARCHIVE.md + the
# quarantine-archive branch); their honest intent was salvaged into src/.
#
# Packaging carries the app's RUNTIME DATA, not just code (RC finding 2026-07-02:
# the built wheel/sdist held ZERO data files, so the published artifacts could not
# serve the UI or seed sources). `src/static` resolves module-relative; `configs/`,
# `migrations/` and the in-app `docs/` resolve as SIBLINGS of the `src` package
# (repo root == site-packages on a wheel install), so they ship as top-level
# namespace packages and the existing path resolution works unchanged. NOTE:
# `src`/`configs`/`docs` are generic top-level names — acceptable for the
# GitHub-release artifact (the primary install path is git + install.sh); a
# PyPI-grade package rename is tracked post-0.1.
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs", "migrations*", "docs"]
namespaces = true

[tool.setuptools.package-data]
"src" = ["static/**/*"]
"configs" = ["**/*.yml", "**/*.yaml", "**/*.txt", "**/*.json", "**/*.csv", "**/*.mmdb", "**/*.bin", "**/*.gz", "**/*.example"]
"migrations" = ["script.py.mako"]
"docs" = ["*.md", "i18n/**/*.md", "legal/*.md"]

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["migrations", "build", "dist", ".venv"]

[tool.ruff.lint]
# Sensible, non-pedantic default. E/F = pyflakes+pycodestyle, I = isort,
# UP = pyupgrade, B = bugbear, C4 = comprehensions, SIM = simplify.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length is advisory; ruff-format handles wrapping
    "B008",   # Depends() in arg defaults is the idiomatic FastAPI pattern
    "UP042",  # (str, Enum) is intentional for JSON-serialisable enums
]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
# async_db is kept-for-future Postgres scaffolding (unused, 0 coverage) --
# typed properly when it is actually wired in.
exclude = ["migrations/", "src/database/async_db.py"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Only the core suite for now. Pillars are added back as each is rebuilt.
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
